# C-Codes

./: .gitignore
Codes in c++/: CMakeLists.txt  SubStringMatching.cpp  configureVScode.txt  main  palindromeCheck.cpp  temp.cpp
Codes in c++/01.DataStructureBari/: array  array.cpp
Codes in c++/Arithmetic Problems/: ArithmeticNotes.docx  ArithmeticProblem.cpp  modulus.cpp
Codes in c++/BJIT/: abbreviation  abbreviation.cpp  consicutiveTriplet  consicutiveTriplet.cpp  input.txt  recursiveProblem  recursiveProblem.cpp  recusiveoutput  recusiveoutput.cpp
Codes in c++/Brain Station 23/: input.txt  temp1  temp1.cpp  temp2  temp2.cpp  temp3  temp3.cpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp
Codes in c++/Conditional/: ConditionalProblems.cpp
Codes in c++/Data Structure/: BinarySearch  BinarySearch.cpp  Insertionsort  Insertionsort.cpp  QuickSort  QuickSort.cpp  bubblesort  bubblesort.cpp  selectionsort  selectionsort.cpp
Codes in c++/Dynamic Memory Allocation/: DynamicArray.cpp
Codes in c++/EnosisPreperation/: FormatChecking.cpp  enosisProblems.cpp  repetedElement  repetedElement.cpp  reverseSentenceWords  reverseSentenceWords.cpp  secondHighest  secondHighest.cpp
Codes in c++/Function/: FunctionProblems.cpp
Codes in c++/Function Recursion/: recusion  recusion.cpp  tempCodeRunnerFile.cpp
Codes in c++/HackerRank/: arrayManipulation  arrayManipulation.cpp  leftRotate.cpp  maxpalindrome  maxpalindrome.cpp  output.txt  rightRotate.cpp  stringsherlock  stringsherlock.cpp
Codes in c++/List/: ListRawCode.cpp  PracticeList.cpp  STLList.cpp  (+1 more)
(+116 files in other folders)
