cmake_minimum_required(VERSION 3.20)
project(PracticeProblem)

set(CMAKE_CXX_STANDARD 17)

add_executable(PracticeProblem main.cpp "Arithmetic Problems/ArithmeticProblem.cpp" "Arithmetic Problems/modulus.cpp" "Dynamic Memory Allocation/DynamicArray.cpp" Function/FunctionProblems.cpp Conditional/ConditionalProblems.cpp LoopProblems/LoopProblems.cpp EnosisPreperation/enosisProblems.cpp Vector/VectorProblems.cpp Pair/PracticePairTuple.cpp List/PracticeList.cpp)
